# MoexTask

./: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Defines.h  FifoDataSource.cpp  FifoDataSource.h  FileDataSource.cpp  FileDataSource.h  IAnswerer.h  IConsumer.h  IProducer.h  IReader.h  IStatsQuery.h  IStopper.h  Main.cpp  README.md  Server.cpp  Server.h  StatisticsAnalyzer.cpp  StatisticsAnalyzer.h  StatisticsClient.cpp  StatisticsClient.h  StatisticsClientMain.cpp  StatisticsServer.cpp  StatisticsServer.h  StatisticsServerMain.cpp  Stopper.cpp  Stopper.h  Synchronizer.cpp  Synchronizer.h  TcpDataSource.cpp  TcpDataSource.h  TcpServer.cpp  TcpServer.h  ThreadedActor.cpp  ThreadedActor.h  ThreadedConsumer.h  ThreadedProducer.h  TsvParser.cpp  TsvParser.h  (+9 more)
